test/modules/cassella/ambigmodmain.unnested.good
error: Ambiguous module specified as main, there are multiple definitions of 'M'
ambigmodmain.unnested.chpl:2: note: defined here
ambigmodmain.unnested.chpl:8: note: defined here
