test/modules/cassella/ambigmodmain.mainModule.chpl
module X {
  module M {
    proc main() { writeln("X.M"); }
  }
}

module Y {
  module M {
    proc main() { writeln("Y.M"); }
  }
}
